# blackjack

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
data/basic-strategy/h17/: hard.csv  pair.csv  soft.csv
src/baked/blackjack/api/: api.py
src/baked/blackjack/basicstrategy/: service.py
src/baked/blackjack/basicstrategy/charts/: h17.py
src/baked/blackjack/basicstrategy/practice/: charts.py  hands.py
src/baked/blackjack/cli/: bjck.py  practice.py
src/baked/blackjack/model/: model.py
test/baked/blackjack/basicstrategy/: test_service.py
