[metadata]
name = baked-blackjack
version = 0.0.1
author = Martin Baker
author_email = martin.baker@rimes.com
description = Baked Blackjack
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/MartianBerk/blackjack
project_urls = 
    Bug Tracker = "https://github.com/MartianBerk/bakedacl/issues"
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir = 
    = src
python_requires = >= 3.8
install_requires = 
    click==8.1.8
provides = baked.blackjack

[options.entry_points]
console_scripts = 
    bjck = baked.blackjack.cli.bjck:bjck

[options.packages.find]
where = 
    src
include = 
    baked*

[tool:pytest]
minversion = 5.0.1
addopts =
    --cov-branch
    --cov=rimes
    --cov-report=html
    --cov-report=xml
testpaths =
    test

[coverage:run]
branch = true
source =
    ..\src
omit =
    *test*

[coverage:report]
fail_under = 90
precision = 2
show_missing = true

[coverage:html]
title = Coverage report for package "baked-blackjack"
directory = htmlcov